Issue fix - Unable to load father's details on the encounter form

--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -183,7 +183,7 @@
 			}
 
 			function includeFathersNames() {
-				jq.getJSON('/' + OPENMRS_CONTEXT_PATH +  '/kenyaemr/patient/patientUtils/getFathers.action',{ patientId: personId },function(data) {
+				jq.getJSON('/' + OPENMRS_CONTEXT_PATH +  '/kenyaemr/patient/patientUtils/getFathers.action',{ patientId: patientId },function(data) {
 					var fatherName;
 					var personId = "";
 					for ( var p in data){
