Fixed UPN validation regex by removing the hyphen so that generated UPNs validate okay.

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -89,7 +89,7 @@
 					return false;
 				}*/
 
-				if(/^[0-9]{5}-[0-9]{5}$/.test(upn) === false) {
+				if(/^[0-9]{5}[0-9]{5}$/.test(upn) === false) {
 					alert("Invalid Unique Patien Number(UPN) Format! Should be mfl-clinic number, each 5 digits");
 					return false;
 				}
