--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
@@ -59,6 +59,7 @@
 								<td>Reaction</td>
 								<td>Grading</td>
 								<td>Causative agent</td>
+								<td>Action taken*</td>  <!-- pw.Greencard additions action taken missing question id -->
 							</tr>
 							<repeat>
 								<template>
@@ -68,8 +69,16 @@
 											<td><obs conceptId="160644AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " /></td>
 											<td><obs conceptId="160759AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="160754AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160755AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160756AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160757AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160758AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mild,Moderate,Severe,Fatal,Unknown" /></td>
 											<td><obs conceptId="160643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="autocomplete" answerClasses="Drug" labelText=" "  /></td>
+											<td>
+											<obs conceptId="1255AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+												 answerConceptIds="1257AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1259AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,981AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1258AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+												 answerLabels="CONTINUE REGIMEN,CHANGE REGIMEN,DOSING CHANGE,CHANGE FORMULATION,NONE"
+												 style="dropdown"
 
 
+											/>
+
+											</td>
 										</tr>
 									</obsgroup>
 								</template>
@@ -128,14 +137,84 @@
 						<div id="whoChild">
 							<table>
 								<tr>
-									<td><strong>Child</strong><obs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1220AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1221AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1222AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1223AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown" answerLabels="WHO Stage1,WHO Stage2,WHO Stage3,WHO Stage4" /></td>
+									<td><strong>Child</strong><obs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1220AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1221AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1222AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA," style="dropdown" answerLabels="WHO Stage1,WHO Stage2,WHO Stage3,WHO Stage4" /></td>
 								</tr>
 							</table>
 						</div>
 					</td>
 				</tr>
+				<tr>
+					<!-- .pw greencard additions physical examination findings -->
+
+					<td>Physical examination*:</td>
+						<td>
+
+							<obs conceptId="162737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="136443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,460AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5334AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5245AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA," style="dropdown" answerLabels="Jaundice,Oedema,Thrush,Pallor"  /><br/>
+
+						 </td>
+					<!-- .pw greencard additions physical examination findings -->
+				</tr>
 			</table>
 		</fieldset>
+		<!-- pw greencard additions LAbs-->
+		<fieldset>
+			<legend>Laboratory* </legend>
+			<table>
+				<tr>
+					<td>Lab Name:</td>
+					<td>
+						<obs conceptId="1271AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+
+						Order reason:
+<!--missing question id-->
+						<obs conceptId="160288AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+							 answerConceptIds="162080AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161256AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,151685AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+							 answerLabels="Baseline,Routine,Confirmatory,Suspected Drug Resistance,Other,"
+							 style="dropdowm"  />
+
+					Order date:
+					<obs id="lab-order-date" conceptId="162078AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" />
+                   </td>
+
+				</tr>
+				<tr>
+					<td>Laboratory Notes:</td>
+
+				<td>
+					<obs conceptId="159395AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="5" cols="75" /> </td>
+				</tr>
+				<!-- .pw greencard additions LAbs-->
+				<!-- .pw greencard additions Antigen today vaccination -->
+			</table>
+		</fieldset>
+		<fieldset>
+			<legend>Antigen today*</legend>
+			<table>
+					<tr>
+						<td>Vaccine</td>
+						<td>
+							<obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="36AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,783AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,886AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1423AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,82215AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162342AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown" answerLabels="Measles,Polio,BCG,Penta,PV,PCV"  /><br/>
+
+						</td>
+						<td>Vaccine Stage</td>
+						<td>
+							<select>
+								<option value="Select">Select</option>
+								<option value="Stage1">Stage1</option>
+								<option value="Stage2">Stage2</option>
+								<option value="Stage3">Stage3</option>
+								<option value="Stage4">Stage4</option>
+							</select>
+						</td>
+						<td>
+						Vaccination Date:
+						<obs id="vaccination-date" conceptId="1410AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" />
+						</td>
+				</tr>
+			</table>
+		</fieldset>
+		<!-- .pw greencard additions Antigen today vaccination -->
+
 		<fieldset>
 			<legend>Cotrimoxazole</legend>
 			<table>
@@ -184,14 +263,27 @@
 					</td>
 				</tr>
 				<tr>
-					<td>Return Visit Date:</td>
-					<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" /> </td>
-				</tr>
+					<td>Return Visit Date/ Differenciated Care*:</td>
+					<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" />
+						Reason*:
+						<obs conceptId="160288AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+						answerConceptIds="160523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1283AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159382AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160521AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+						answerLabels="Follow up,Lab tests,Counseling,Pharmacy Refill,Other,"
+						style="dropdowm"  />
+					 Differentiated Care*
+						<select>
+							<option value="Standard">Standard</option>
+							<option value="Express">Express</option>
+							<option value="Community dispensing">Community dispensing</option>
+						</select>
+					</td>
+
+			</tr>
 			</table>
 		</fieldset>
 
 		<fieldset >
-			<legend>At Risk Population</legend>
+			<legend>Population type</legend>
 			<table>
 				<tr>
 					<td valign="top">Is the client a member of at-risk population?</td>
