--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
@@ -826,7 +826,7 @@
             </tr>
             <tr class="patient-details">
                 <th rowspan="6">Laboratory<br />Investigations<br />Done</th>
-                <!-- pw Greencard addittions viral load tracker  -->
+                <!--  Greencard addittions viral load tracker  -->
                 <th colspan="2">Lab Order*</th>
                 <td>(x)</td> <td colspan="2">
                 Lab Name
